# ulpsi

./: .gitignore  Cargo.toml  README.md  bootstrap-linux.sh  setup-1B.sh
client/: Cargo.toml
client/src/: main.rs
notes/: Labelled PSI.md  PSI.md
notes/.obsidian/: workspace.json
psi/: Cargo.toml
psi/src/: client.rs  hash.rs  lib.rs  main.rs  poly_interpolate.rs  serlize.rs  utils.rs
psi/src/server/: db.rs  mod.rs  paterson_stockmeyer.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  data.rs  hash.rs  lib.rs  main.rs  poly_interpolate.rs  server.rs  utils.rs
src/server/: db.rs  mod.rs  paterson_stockmeyer.rs
