[package]
name = "psi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfv = {path = "./../../bfv/bfv", features = ["serialize"]}
traits = {path = "./../../bfv/traits"}
rand = "0.8.5"
itertools = "0.10.5"
rand_chacha = "0.3.1"
ndarray = {version = "0.15.6", features = ["serde"]}
ring = "0.16.20"
rayon = "1.7.0"
prost = "0.11.9"
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
serde_bytes = "0.11.12"
bincode = "1.3.3"
crypto-bigint = "0.5.3"