[package]
name = "psi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfv = {workspace = true}
traits = {workspace = true}
rand_chacha = {workspace = true}
rand = {workspace = true}
bincode = {workspace = true}
crypto-bigint = {workspace = true}
prost = {workspace = true}

ndarray = {version = "0.15.6", features = ["serde"]}
itertools = "0.10.5"
ring = "0.16.20"
rayon = "1.7.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_bytes = "0.11.12"