[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psi = {path = "./../psi"}
tokio = {version = "1.32.0", features = ["full"]}
serde_json = "1.0.105"
rand = "0.8.5"
bfv = {path = "./../../bfv/bfv", features = ["serialize"]}
traits = {path = "./../../bfv/traits"}
prost = "0.11.9"
bincode = "1.3.3"
crypto-bigint = "0.5.3"