[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psi = {path = "./../psi"}

bfv = {workspace = true}
traits = {workspace = true}
rand = {workspace = true}
prost = {workspace = true}
crypto-bigint = {workspace = true}
bincode = {workspace = true}
tokio = {workspace = true}

clap = {version="4.4.2", features = ["derive"]}